// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`entity-column-event-statistics Renders \`entity-column-event-statistics\` with default entity 1`] = `
<div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"><span class="pre-wrap">15 OK events
25 KO Events</span></div>
<div class="layout event-statistics__tooltip justify-center"><span class="mr-1 success--text font-weight-bold">15</span><span>/</span><span class="ml-1 error--text font-weight-bold">25</span></div><span class="v-tooltip v-tooltip--top"><transition-stub name="slide-y-reverse-transition"></transition-stub></span>
`;

exports[`entity-column-event-statistics Renders \`entity-column-event-statistics\` with pbehavior 1`] = `
<div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"><span class="pre-wrap">30 OK events
45 KO Events</span></div>
<div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"><span class="pre-wrap">15 OK events
25 KO Events</span></div>
<div class="layout event-statistics__tooltip justify-center"><span class="mr-1 success--text font-weight-bold">15</span><span>/</span><span class="ml-1 error--text font-weight-bold">25</span></div><span class="v-tooltip v-tooltip--top"><transition-stub name="slide-y-reverse-transition"></transition-stub></span>
<div class="layout event-statistics__tooltip justify-center event-statistics__tooltip--inactive"><span class="mr-1 success--text font-weight-bold">30</span><span>/</span><span class="ml-1 error--text font-weight-bold">45</span></div><span class="v-tooltip v-tooltip--top"><transition-stub name="slide-y-reverse-transition"></transition-stub></span>
`;
